--- a/dataset_updater.ipynb
+++ b/dataset_updater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +15,8 @@
    ],
    "source": [
     "import requests\n",
+    "import folium\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import json\n",
     "\n",
