notebook used to test data fetching et storing function

--- a/data_toolset/data-fetching.ipynb
+++ b/data_toolset/data-fetching.ipynb
@@ -23,6 +23,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import json\n",
+    "import asyncio\n",
+    "import aiohttp\n",
+    "import requests\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from urllib.parse import urlencode, urlunparse, urlparse, parse_qs\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -2271,6 +2288,199 @@
    "source": [
     "df = get_data_time_frame_as_dataframe(start_date, end_date, limit=100)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from environs import Env\n",
+    "from urllib.parse import urlencode, urlunparse, urlparse, parse_qs\n",
+    "\n",
+    "\n",
+    "\n",
+    "env = Env()\n",
+    "env.read_env(\"../.env\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://example.com/api/resource/123?key1=value1&key2=value2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from urllib.parse import urlencode, urlunparse, urlparse, parse_qs\n",
+    "\n",
+    "def url_builder(base_url, *args, **kwargs):\n",
+    "    # Parse the base URL\n",
+    "    scheme, netloc, path, params, query, fragment = urlparse(base_url)\n",
+    "\n",
+    "    # Concatenate additional URL segments from *args\n",
+    "    path = \"/\".join([path] + list(args))\n",
+    "\n",
+    "    # Parse existing query parameters\n",
+    "    existing_params = parse_qs(query)\n",
+    "\n",
+    "    # Update existing parameters with new ones\n",
+    "    existing_params.update(kwargs)\n",
+    "\n",
+    "    # Encode the parameters and construct the new query string\n",
+    "    new_query = urlencode(existing_params, doseq=True)\n",
+    "\n",
+    "    # Build the final URL\n",
+    "    final_url = urlunparse((scheme, netloc, path, params, new_query, fragment))\n",
+    "\n",
+    "    return final_url\n",
+    "\n",
+    "base_url = \"https://example.com/api\"\n",
+    "result_url = url_builder(base_url, \"resource\", \"123\", key1=\"value1\", key2=\"value2\")\n",
+    "print(result_url)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/records?order_by=date%2520DESC&limit=100&offset=766\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "api_url_datacount = url_builder(\"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/records\", \n",
+    "                                order_by='date%20DESC',\n",
+    "                                limit=str(100),\n",
+    "                                offset=str(766)\n",
+    "                                )\n",
+    "\n",
+    "#L'URL de l'API pour localisation des sites de comptage\n",
+    "api_url_localisation = env(\"COUNTER_LOCATION_RECORD\")+\"?limit=29\"\n",
+    "\n",
+    "#L'URL de l'API pour télécharger toutes les données\n",
+    "api_url_export = url_builder(\"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/records\", \"/json?lang=fr&timezone=Europe%2FBerlin\" )\n",
+    "\n",
+    "print(api_url_datacount)\n",
+    "print(type(api_url_localisation))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_COUNT_RECORD = \"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/records\"\n",
+    "DATA_COUNT_EXPORT = \"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/exports\"\n",
+    "COUNTER_LOCATION_RECORD = \"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-sites/records\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4703\n"
+     ]
+    }
+   ],
+   "source": [
+    "def update_dataset():\n",
+    "    # L'URL de l'API pour donné de compteur \n",
+    "    limit_datacount = 100 # télécharger 100 données mais ne pas saugarder localement \n",
+    "    offset_datacount = 0\n",
+    "    dateEtHeure ='2023-12-24T23'\n",
+    "    #api avec un filtre \"order by\" dans l'ordre décroissant de dates dans datacount\n",
+    "    api_url_datacount = \"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/records?order_by=date%20DESC&limit=\" + str(limit_datacount) +\"&offset=\" + str(offset_datacount)\n",
+    "\n",
+    "    #L'URL de l'API pour localisation des sites de comptage\n",
+    "    api_url_localisation = \"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-sites/records?limit=29\"\n",
+    "\n",
+    "    #L'URL de l'API pour télécharger toutes les données \n",
+    "    api_url_export = \"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/exports/json?lang=fr&timezone=Europe%2FBerlin\"\n",
+    "\n",
+    "\n",
+    "    # #local_data telecharge depuis serveur\n",
+    "    local_data = pd.read_json(\"local_data.json\")\n",
+    "\n",
+    "    update_data = [] # initialise update_data par une liste\n",
+    "\n",
+    "    dateEtHeure = local_data.iloc[0]['date'][:-12] # pour avoir la forme de variable dateEtHeure identique que celle declarée dessus\n",
+    "\n",
+    "    #L'URL de l'API pour la mise à jour de données (where date > dateEtHeure le plus récent indiqué dans local_data, order by date descendant, timezone Europe/Berlin)\n",
+    "    api_url_update_data =\"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/records?where=date%3Edate'\"+dateEtHeure+\"%3A00%3A00%2B01%3A00'&order_by=date%20DESC&limit=\"+str(limit_datacount)+\"&offset=\"+str(offset_datacount)+\"&timezone=Europe%2FBerlin\"\n",
+    "\n",
+    "\n",
+    "    # Effectuer une requête GET pour obtenir les données\n",
+    "    response_updateData = requests.get(api_url_update_data) # dictionnaire (indice total_count, indice results)\n",
+    "    response_localisation = requests.get(api_url_localisation)\n",
+    "\n",
+    "    if (response_updateData.status_code != 200):\n",
+    "    \n",
+    "        print(f'Échec de la requête HTTP, code de statut {response_updateData.status_code}')\n",
+    "\n",
+    "    if (response_localisation.status_code != 200):\n",
+    "    \n",
+    "        print(f'Échec de la requête HTTP, code de statut {response_localisation.status_code}')\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # Si la requête a réussi (code de statut HTTP 200), vous pouvez accéder aux données\n",
+    "    data_localisation = response_localisation.json()\n",
+    "\n",
+    "    total_count = response_updateData.json()['total_count']\n",
+    "\n",
+    "    print(total_count)\n",
+    "\n",
+    "    if (total_count != 0) : # le nombre de données mises à jour \n",
+    "        while (total_count >= 100) : # data limit is 100\n",
+    "            update_data.extend(requests.get(api_url_update_data).json()['results'])\n",
+    "            total_count -= 100\n",
+    "            offset_datacount +=  100\n",
+    "            api_url_update_data =\"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/records?where=date%3Edate'\"+dateEtHeure+\"%3A00%3A00%2B01%3A00'&order_by=date%20DESC&limit=\"+str(limit_datacount)+\"&offset=\"+str(offset_datacount)+\"&timezone=Europe%2FBerlin\"\n",
+    "\n",
+    "        limit_datacount = total_count\n",
+    "        api_url_update_data =\"https://data.metropole-rouen-normandie.fr/api/explore/v2.1/catalog/datasets/eco-counter-data/records?where=date%3Edate'\"+dateEtHeure+\"%3A00%3A00%2B01%3A00'&order_by=date%20DESC&limit=\"+str(limit_datacount)+\"&offset=\"+str(offset_datacount)+\"&timezone=Europe%2FBerlin\"\n",
+    "        update_data.extend(requests.get(api_url_update_data).json()['results'])\n",
+    "        list_local_data =local_data.to_dict(orient='records')\n",
+    "        update_data.extend(list_local_data)\n",
+    "        # Utilisez json.dump() pour sauvegarder le dictionnaire dans le fichier JSON\n",
+    "\n",
+    "        with open('local_data.json', 'w') as fichier_json:\n",
+    "            json.dump(update_data, fichier_json)\n",
+    "\n",
+    "update_dataset()"
    ]
   }
  ],
