corrected heatmap chart title

--- a/visualisation.ipynb
+++ b/visualisation.ipynb
@@ -758,7 +758,7 @@
     "sns.heatmap(heatmap_data, cmap='viridis', annot=True, fmt='d', linewidths=.5)\n",
     "\n",
     "# Customize plot labels and title\n",
-    "plt.title('Comptage journalier pour chaque jour de la semaine')\n",
+    "plt.title(\"Comptage hoaire pour chaque jour de la semaine sur toute l'etendue des données\")\n",
     "plt.xlabel(\"heures d'une journée\")\n",
     "plt.ylabel(\"Jours de la semaine\")\n",
     "\n",
