unfinished heatmap code, needs to be checked

--- a/dataset_updater.ipynb
+++ b/dataset_updater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +124,41 @@
     "#     # Afficher la carte\n",
     "# mymap.save('map.html')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_json('local_data.json')\n",
+    "import plotly.express as px\n",
+    "import ipywidgets as ipw\n",
+    "\n",
+    "mois = ['01', '02', '03', '04', '05', '06', '07', '08', '09' , '10' , '11' , '12'] \n",
+    "an = ['2022', '2023', '2024']\n",
+    "date_jour = df['date_j'].unique()\n",
+    "date_jour\n",
+    "\n",
+    "df['date_j'] = pd.to_datetime(df['date_j'])\n",
+    "df['month_year'] = df['date_j'].dt.to_period('M')\n",
+    "df['month']=df['month_year']\n",
+    "print(df['month_year'])\n",
+    "\n",
+    "# print(df['month_year'])\n",
+    "# monthly_avg_counts = df.groupby('month_year')\n",
+    "\n",
+    "filtered_df = df[(df['month_year'] == '2022-04') ][['month_year', 'counts', 'date_j']].reset_index(drop=True)\n",
+    "\n",
+    "period = pd.to_datetime('2022-04').to_period('M')\n",
+    "\n",
+    "# Calculer la somme des counts dans filtered_df\n",
+    "total_counts = filtered_df['counts'].sum()\n",
+    "moyen= total_counts / period.to_timestamp().days_in_month\n",
+    "print(total_counts)\n",
+    "print(moyen)"
    ]
   }
  ],
