--- a/dataset_updater.ipynb
+++ b/dataset_updater.ipynb
@@ -133,32 +133,145 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_json('local_data.json')\n",
     "import plotly.express as px\n",
     "import ipywidgets as ipw\n",
-    "\n",
-    "mois = ['01', '02', '03', '04', '05', '06', '07', '08', '09' , '10' , '11' , '12'] \n",
+    "import matplotlib.pyplot as plt\n",
+    "df = pd.read_json('local_data.json')\n",
+    "df\n",
+    "df['date_j'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mois = ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12']\n",
     "an = ['2022', '2023', '2024']\n",
     "date_jour = df['date_j'].unique()\n",
-    "date_jour\n",
     "\n",
+    "# Convertir en datetime\n",
+    "df['date'] =  pd.to_datetime(df['date'], utc=True)\n",
     "df['date_j'] = pd.to_datetime(df['date_j'])\n",
     "df['month_year'] = df['date_j'].dt.to_period('M')\n",
-    "df['month']=df['month_year']\n",
-    "print(df['month_year'])\n",
     "\n",
-    "# print(df['month_year'])\n",
-    "# monthly_avg_counts = df.groupby('month_year')\n",
+    "# Créer une liste de tous les mois de janvier 2022 à janvier 2024\n",
+    "months = pd.period_range(start='2022-01', end='2024-01', freq='M')\n",
     "\n",
-    "filtered_df = df[(df['month_year'] == '2022-04') ][['month_year', 'counts', 'date_j']].reset_index(drop=True)\n",
+    "# Créer un DataFrame avec une colonne 'mois' contenant les mois et une colonne 'mean_count_per_day' initialisée à NaN\n",
+    "df_result = pd.DataFrame({'mois': months, 'mean_count_per_day': [None] * len(months)})\n",
     "\n",
-    "period = pd.to_datetime('2022-04').to_period('M')\n",
+    "# Remplir la colonne 'mean_count_per_day' avec les valeurs moyennes appropriées\n",
+    "for i, month_period in enumerate(months):\n",
+    "    # Calculer la valeur moyenne pour le mois donné\n",
+    "    total_counts = df[df['month_year'] == month_period]['counts'].sum()\n",
+    "    mean_counts_per_day = total_counts / month_period.to_timestamp().days_in_month / len(df['name'].unique())\n",
+    "    # Assigner la valeur moyenne à la ligne correspondante dans le DataFrame résultant\n",
+    "    df_result.at[i, 'mean_count_per_day'] = mean_counts_per_day\n",
     "\n",
-    "# Calculer la somme des counts dans filtered_df\n",
-    "total_counts = filtered_df['counts'].sum()\n",
-    "moyen= total_counts / period.to_timestamp().days_in_month\n",
-    "print(total_counts)\n",
-    "print(moyen)"
+    "plt.figure(figsize=(10, 6))\n",
+    "df_result['mois_str'] = df_result['mois'].astype(str)\n",
+    "\n",
+    "# Tracer un graphique linéaire\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(df_result['mois_str'], df_result['mean_count_per_day'], marker='o', linestyle='-')\n",
+    "\n",
+    "plt.title('Passages moyens journaliers au mois')\n",
+    "plt.xlabel('Mois')\n",
+    "plt.ylabel('Passages journaliers moyens ')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer une liste de tous les heures\n",
+    "heures = pd.period_range(start='00:00', end='23:00', freq='h')\n",
+    "heures_only = [str(heure.strftime('%H:%M:%S')) for heure in heures]\n",
+    "\n",
+    "# Créer une liste de tous les jours de la semaine\n",
+    "days_in_a_week = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "\n",
+    "# Créer un DataFrame avec une colonne 'day' contenant les jours, une colonne 'hour' contenant les heures, \n",
+    "# et une colonne 'mean_count_per_day' initialisée à NaN\n",
+    "df_result = pd.DataFrame({'day': days_in_a_week * len(heures_only), \n",
+    "                          'hour': heures_only * len(days_in_a_week), \n",
+    "                          'mean_count_per_day': [None] * len(days_in_a_week) * len(heures_only)})\n",
+    "\n",
+    "# Regrouper les données par heure et sommer les valeurs de la colonne \"counts\" pour chaque heure\n",
+    "df['day_name'] = df['date_j'].dt.day_name()\n",
+    "\n",
+    "# Extraire uniquement l'heure de la colonne 'date' et stocker le résultat dans une nouvelle colonne 'heure'\n",
+    "df['heure'] = df['date'].dt.strftime('%H:%M:%S')\n",
+    "\n",
+    "# Remplir la colonne 'mean_count_per_day' avec les valeurs moyennes appropriées\n",
+    "for hour in heures_only:\n",
+    "    for day_name in days_in_a_week:\n",
+    "        # Filtrer les données pour le jour et l'heure donnés\n",
+    "        filtered_data = df[(df['day_name'] == day_name) & (df['heure'] == hour)]\n",
+    "        # Calculer la moyenne des valeurs de la colonne 'counts' pour ces données filtrées\n",
+    "        mean_count = filtered_data['counts'].mean()\n",
+    "        # Assigner la valeur moyenne à la ligne correspondante dans le DataFrame résultant\n",
+    "        df_result.loc[(df_result['day'] == day_name) & (df_result['hour'] == hour), 'mean_count_per_day'] = round(mean_count)\n",
+    "\n",
+    "print(df_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertir les colonnes 'day' et 'hour' en variables catégorielles avec un ordre spécifique\n",
+    "df_result['day'] = pd.Categorical(df_result['day'], categories=days_in_a_week, ordered=True)\n",
+    "df_result['hour'] = pd.Categorical(df_result['hour'], categories=heures_only, ordered=True)\n",
+    "df_result['mean_count_per_day'] = pd.to_numeric(df_result['mean_count_per_day'], errors='coerce')\n",
+    "# Pivoter les données pour avoir les jours comme index, les heures comme colonnes et les valeurs de 'mean_count_per_day' comme valeurs\n",
+    "heatmap_data = df_result.pivot(index='hour', columns='day', values='mean_count_per_day')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Tracer le heatmap\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "sns.heatmap(heatmap_data, cmap='viridis', annot=True, fmt=\".2f\", cbar_kws={'label': 'Mean Count per Day'})\n",
+    "plt.title('Heatmap of Mean Count per Day')\n",
+    "plt.xlabel('Hour')\n",
+    "plt.ylabel('Day')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertir les colonnes 'day' et 'hour' en variables catégorielles avec un ordre spécifique\n",
+    "df_result['day'] = pd.Categorical(df_result['day'], categories=days_in_a_week, ordered=True)\n",
+    "df_result['hour'] = pd.Categorical(df_result['hour'], categories=heures_only, ordered=True)\n",
+    "\n",
+    "# Pivoter les données pour avoir les jours comme index, les heures comme colonnes et les valeurs de 'mean_count_per_day' comme valeurs\n",
+    "heatmap_data = df_result.pivot(index='day', columns='hour', values='mean_count_per_day')\n",
+    "\n",
+    "# Tracer le heatmap avec Plotly Express\n",
+    "fig = px.imshow(heatmap_data, x=heures_only, y=days_in_a_week, color_continuous_scale='viridis')\n",
+    "fig.update_layout(title='Heatmap of Mean Count per Day', xaxis_title='Hour', yaxis_title='Day')\n",
+    "\n",
+    "# Créer une interface interactive avec ipywidgets pour afficher le heatmap\n",
+    "def update_heatmap(color_scale):\n",
+    "    fig.update_traces(colorscale=color_scale)\n",
+    "\n",
+    "color_scale_dropdown = ipw.Dropdown(options=['viridis', 'plasma', 'inferno'], value='viridis', description='Color Scale:')\n",
+    "ipw.interactive(update_heatmap, color_scale=color_scale_dropdown)"
    ]
   }
  ],
