Other diagrams updated done

--- a/dataset_updater.ipynb
+++ b/dataset_updater.ipynb
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
     }
    ],
    "source": [
-    "from PIL import Image, ImageDraw\n",
+    "from PIL import Image\n",
     "from io import BytesIO\n",
     "# Calculer le nombre total moyen de passages par jour pour chaque station\n",
     "station_stats = df.groupby(['id', 'name', 'photourl']).agg(total_passages=('counts', 'sum'), total_days=('date_j', 'nunique')).reset_index()\n",
